2004-09-23  John W. Eaton  <jwe@octave.org>

	* (OCTAVE_SS_INT_OPS2, OCTAVE_SM_INT_OPS2, OCTAVE_MM_INT_OPS2,
	OCTAVE_INSTALL_SS_INT_OPS2, OCTAVE_INSTALL_SM_INT_OPS2,
	OCTAVE_INSTALL_MS_INT_OPS2, OCTAVE_INSTALL_MM_INT_OPS2):
	Delete unused macros.

	* OPERATORS/op-int.h (OCTAVE_SS_INT_BOOL_OPS): New args Z1 and Z2.
	(OCTAVE_SS_INT_OPS): Pass appropriately typed zero values to
	OCTAVE_SS_INT_BOOL_OPS.
	* OPERATORS/op-i64-i64.cc, OPERATORS/op-ui64-ui64.cc: Likewise.

	* pr-output.cc (pr_plus_format): Now template.
	Specialize for Complex.
	(octave_print_internal): Lookup print_conv_type using
	octave_int<T>, not just T.

	* ov-struct.cc (octave_struct::subsref): Pass skip to next_subsref.

	* oct-stream.cc	(do_read): Hitting EOF should not be an error.

2004-09-22  John W. Eaton  <jwe@octave.org>

	* pt-plot.cc (send_to_plot_stream): Skip automatic replot if in
	multiplot mode.

	* variables.cc (get_global_value): New arg, silent.
	* variables.h (get_global_value): Default value for silent arg is
	false.

2004-09-22  David Bateman  <dbateman@free.fr>

	* ov-fcn-inline.cc (Finline): When called with a single arg, derive
	argument of inline function in a compatible manner.

2004-09-22  Federico Zenith  <zenith@chemeng.ntnu.no>

	* DLD-FUNCTIONS/qz.cc (Fqz): New @tex section(s) in doc string for
	better formating of printed documentation.  Use @var in doc string.

	* DLD-FUNCTIONS/time.cc (Fstrftime): Fix typo in doc string.
	* error.cc (Flasterr, Flastwarn): Likewise.
	* mappers.cc (Farg, Fasinh, Fatanh, Ffinite, Fsin, Fsinh, Ftan):
	Likewise.
	* file-io.cc (Fmktemp): Likewise.
	* pt-plot.cc (symbols_of_pt_plot): Fix typos in doc string for
	gnuplot_has_frames.

	* input.cc (symbols_of_input): Replace --echo-input with new
	--echo-commands in PS4 doc string.

	* pt-assign.cc (symbols_of_pt_assign): Mark print_rhs_assign_val
	as built-in in doc string.

	* symtab.cc (symbols_of_symtab): Mark variables_can_hide_functions
	as built-in in doc string.
