@@ -208,6 +208,12 @@ extern void install_ops (void);
     return new octave_matrix (NDArray (v.e ## _value ())); \
   }
 
+#define DEFSTRINTCONVFN(name, tto) \
+  DEFCONVFNX(name, char_matrix_str, tto ## _matrix, tto, char_)
+
+#define DEFSTRDBLCONVFN(name) \
+  DEFCONVFNX(name, char_matrix_str, matrix, , char_)
+
 #define DEFCONVFN(name, tfrom, tto) \
   DEFCONVFNX (name, tfrom, tto ## _matrix, tto, )
 
